zdecom/kube-prometheus-stack/kps stuff/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: horel-ca-issuer
    cert-manager.io/common-name: grafana.horel.io
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-http-to-https@kubernetescrd
spec:
  rules:
    - host: grafana.horel.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
  tls:
    - secretName: grafana-server-tls
      hosts:
        - grafana.horel.io
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: http-to-https
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
